--- a/yacut/templates/index.html
+++ b/yacut/templates/index.html
@@ -15,14 +15,14 @@
               {{ form.csrf_token }}
               <div>
                 <div>
-                  {{ form.original_links(
+                  {{ form.original_link(
                     type="text",
                     class="form-control form-control-lg py-2 mb-3",
                     id="form-title", placeholder="Длинная ссылка"
                     ) }}
                   <p>
-                    {% if form.original_links.errors %}
-                      {% for error in form.original_links.errors %}
+                    {% if form.original_link.errors %}
+                      {% for error in form.original_link.errors %}
                         <span style="color:red">{{ error }}</span>
                       {% endfor %}
                     {% endif %}
